[tool.poetry]
name = "fm"
version = "0.1.0"
description = ""
authors = ["Łukasz Langa <lukasz@langa.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
miniaudio = "1.42"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^21.5b0"
rich = "^10.1.0"
bpython = "^0.21"
Cython = "^0.29.23"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
